objects/Trial_User__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trial Users</relationshipLabel>
        <relationshipName>Trial_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Trial__c</fullName>
        <label>Product Trial</label>
        <referenceTo>Product_Trial__c</referenceTo>
        <relationshipLabel>Trial Users</relationshipLabel>
        <relationshipName>Trial_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID__c</fullName>
        <label>SAP Contact ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Trial User</label>
    <nameField>
        <label>Trial User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trial Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>